src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AreaCodePhone__c</fullName>
        <formula>MID(Phone,2,3)</formula>
        <label>Area Code (Phone)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arizona__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arizona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AverageSurveyScore__c</fullName>
        <label>Average Survey Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgCMreferralspermonth__c</fullName>
        <label>Avg # CM referrals per month</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEU_s_Required__c</fullName>
        <label>CEU&apos;s Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMexpectationspreferences__c</fullName>
        <label>CM expectations &amp; preferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMpetpeeves__c</fullName>
        <label>CM pet peeves?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSL_Comments__c</fullName>
        <label>CSL Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTCT2__Opted_Out_by_CTCT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If HasOptedOutOfEmail = true, this checkbox indicates whether the Opt Out originated in Salesforce or Constant Contact.</description>
        <label>Opted Out by Constant Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>California__c</fullName>
        <defaultValue>false</defaultValue>
        <label>California</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors_Used__c</fullName>
        <label>Competitors Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_or_Vendor_Panel__c</fullName>
        <label>Contract or Vendor Panel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Alerts__c</fullName>
        <label>Critical Alerts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Education_Provider__c</fullName>
        <label>Current Education Provider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Insurer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Insurer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployersManagedbyCP__c</fullName>
        <label>Employers Managed by CP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employers_Assoc_Prof_Activities__c</fullName>
        <label>Employers Assoc / Prof Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Favorite_Entertainment__c</fullName>
        <label>Favorite Entertainment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concerts</fullName>
                </value>
                <value>
                    <fullName>Plays</fullName>
                </value>
                <value>
                    <fullName>Sport - Baseball</fullName>
                </value>
                <value>
                    <fullName>Sport - Football</fullName>
                </value>
                <value>
                    <fullName>Sport - Basketball</fullName>
                </value>
                <value>
                    <fullName>Sport - Hockey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Florida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Florida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gratuities_Granted__c</fullName>
        <inlineHelpText>Date/Type of Gratuity and Value</inlineHelpText>
        <label>Gratuities Granted</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health/Safety Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Howmanyreferralspast6months__c</fullName>
        <label>How many referrals past 6 months?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Human_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Human Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYSEd_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYSEd Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYSEd_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYSEd Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_Admin_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS Admin Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_Friends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS Friends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_Mgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS Mgmt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_NCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS NCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISYS_Voc_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISYS Voc Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_house_NCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-house NCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_house_UR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-house UR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Guidelines__c</fullName>
        <label>Internal Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internet_Communities__c</fullName>
        <label>Internet Communities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsCPabletoselectCMvendor__c</fullName>
        <label>Is CP able to select CM vendor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsContactActivewiththisAccount__c</fullName>
        <inlineHelpText>Select the status of the Contactl with this Account.</inlineHelpText>
        <label>Is Contact Active with this Account?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>On leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LVN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message box from Lead Page</description>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nevada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nevada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nick_Names__c</fullName>
        <label>Nick Names</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Northern_California__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Northern California</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumofSurveys__c</fullName>
        <label># of Surveys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nurse_Gatekeeper_2__c</fullName>
        <label>Nurse Gatekeeper 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nurse_Gatekeeper_Phone_2__c</fullName>
        <label>Nurse Gatekeeper Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nurse_Gatekeeper_Phone__c</fullName>
        <label>Nurse Gatekeeper Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nurse_Gatekeeper__c</fullName>
        <label>Nurse Gatekeeper</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSHA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Course_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Course Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Role__c</fullName>
        <label>&quot;Other&quot; Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Otherimportantinformation__c</fullName>
        <label>Other important information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PotentialareasCPcouldreferto__c</fullName>
        <inlineHelpText>Indicate the areas the CP could give us a referral in.</inlineHelpText>
        <label>Potential areas CP could refer to</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Day_of_Week__c</fullName>
        <label>Preferred Contact Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Gratuities__c</fullName>
        <label>Preferred Gratuities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Gratuities Allowed</fullName>
                </value>
                <value>
                    <fullName>Gratuities 0 - $50</fullName>
                </value>
                <value>
                    <fullName>Gratuities $51 - $150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Communication__c</fullName>
        <label>Preferred Method of Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Time_of_Communication__c</fullName>
        <label>Preferred Time of Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Interested_In__c</fullName>
        <label>Products Interested In?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Rates</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Custom Design</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Live Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Potential_Annually__c</fullName>
        <label>Referral Potential Annually</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReferralsLifetime__c</fullName>
        <label>Referrals (Lifetime)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferralsMonth__c</fullName>
        <label>Referrals (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferralsSixMonths__c</fullName>
        <label>Referrals (6 Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Bakersfield Area</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Fresno North &amp; South</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Imperial County</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-Central</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-North</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-South</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA Central</fullName>
                </value>
                <value>
                    <fullName>LA Southbay</fullName>
                </value>
                <value>
                    <fullName>LA Southeast</fullName>
                </value>
                <value>
                    <fullName>LA Valley</fullName>
                </value>
                <value>
                    <fullName>Long Beach/Pasadena</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rehab_Counselor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rehab Counselor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relatives_Names__c</fullName>
        <label>Relatives Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accupuncturist</fullName>
                </value>
                <value>
                    <fullName>Cardiologist</fullName>
                </value>
                <value>
                    <fullName>Chiropractor</fullName>
                </value>
                <value>
                    <fullName>Claims Professional</fullName>
                </value>
                <value>
                    <fullName>Dermatologist</fullName>
                </value>
                <value>
                    <fullName>DME Provider</fullName>
                </value>
                <value>
                    <fullName>Doctor of Osteopathy (D.O.)</fullName>
                </value>
                <value>
                    <fullName>Employee Attorney</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Employer Attorney</fullName>
                </value>
                <value>
                    <fullName>General Surgeon</fullName>
                </value>
                <value>
                    <fullName>Hand Specialist</fullName>
                </value>
                <value>
                    <fullName>Interpreter Service</fullName>
                </value>
                <value>
                    <fullName>Insurance Broker</fullName>
                </value>
                <value>
                    <fullName>Neuro-Surgeon</fullName>
                </value>
                <value>
                    <fullName>Ortho-Surgeon</fullName>
                </value>
                <value>
                    <fullName>Pain Management Specialist</fullName>
                </value>
                <value>
                    <fullName>Physiatrist</fullName>
                </value>
                <value>
                    <fullName>Physical Therapist</fullName>
                </value>
                <value>
                    <fullName>Podiatrist</fullName>
                </value>
                <value>
                    <fullName>Primary Treating Physician</fullName>
                </value>
                <value>
                    <fullName>Psychologist / Psychiatrist</fullName>
                </value>
                <value>
                    <fullName>RTW Specialist / Coordinator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Economic Buyer</fullName>
                </value>
                <value>
                    <fullName>Economic Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDLComments__c</fullName>
        <description>Comments/Special instructions specific to the Claims Professional</description>
        <label>SDL Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SI_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SI/SA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Safety_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Insured_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Insured Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Southern_California__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Southern California</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_Other__c</fullName>
        <inlineHelpText>To be used for special instructions details if user selects &quot;Other&quot; in corresponding field.</inlineHelpText>
        <label>Special Instructions - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SYS Standards &amp; Protocols</fullName>
                </value>
                <value>
                    <fullName>Swift Transportation</fullName>
                </value>
                <value>
                    <fullName>Chevron Corporation</fullName>
                </value>
                <value>
                    <fullName>Sentry Insurance</fullName>
                </value>
                <value>
                    <fullName>Applied Risk</fullName>
                </value>
                <value>
                    <fullName>Sedgwick</fullName>
                </value>
                <value>
                    <fullName>Gallagher Bassett</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the Contact should receive our surveys</inlineHelpText>
        <label>Survey Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Frame_for_Project_Completion__c</fullName>
        <label>Time Frame for Project Completion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT-04:00) Atlantic Standard Time (Atlantic/Bermuda)</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) Eastern Standard Time (America/New_York)</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Central Standard Time (America/Chicago)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain Standard Time (America/Denver)</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Pacific Standard Time (America/Los_Angeles)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Employees__c</fullName>
        <label>Type of Employees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Types_of_claims_handled_Additional__c</fullName>
        <label>Types of claims handled - Additional</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Types_of_claims_handled__c</fullName>
        <label>Types of claims handled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routine File</fullName>
                </value>
                <value>
                    <fullName>Catastrophic &amp; Complex</fullName>
                </value>
                <value>
                    <fullName>Employer Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WISAFI__External_Account_ID__c</fullName>
        <formula>Account.WISAFI__External_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WISAFI__External_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Contact ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WISAFI__Is_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WISAFI__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WISAFI__Sync_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W/C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhichCMvendorsdoesCPreferto__c</fullName>
        <label>Which CM vendors does CP refer to?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Schedules__c</fullName>
        <label>Work Schedules</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>areascurrentlyreferringtoISYS__c</fullName>
        <inlineHelpText>Indicate the areas the CP refers to.</inlineHelpText>
        <label>Areas currently referring to ISYS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
</CustomObject>